Revision history for Perl extension WWW::GoKGS.

0.02 Jun 5th, 2014

  - Add Scraper::GameArchives#result_filter
  - Add Scraper::TournGames#result_filter
  - Add GoKGS#result_filter

0.01 May 22nd, 2014

  - initial version