@@ -1,5 +1,12 @@
 Revision history for Perl extension WWW::GoKGS.
 
+  - improve documentation
+
+  [BUGFIX]
+
+    - Scraper::TournGames#scrape parses "Bye" properly
+      ($bye->{type} was invalid)
+
 0.02 Jun 5th, 2014
 
   - Add Scraper::GameArchives#result_filter
